# drydantic

./: README.md  pyproject.toml
src/drydantic/: __init__.py  defaults_merge_mixin.py
tests/: test_basic_usage.py
